--- a/style/style2.css
+++ b/style/style2.css
@@ -7,7 +7,7 @@ body {
 }
 nav{
     max-width: 100%;
-    background-color: gray;
+    background-color: white;
     height: 100px;
 }
 .name{
@@ -40,44 +40,37 @@ section, h2 {
     text-color: teal;
 }
 
-.container {
-    position: relative;
-    text-align: center;
-    color: black;
-}
+input[type=text], select, textarea {
+    width: 50%;
+    padding: 12px;  
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+  input[type=submit] {
+    background-color: teal;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: rgb(0, 99, 99);
+  }
+  
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 30px;
+  }
 
-.center {
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    margin: 10%;
-    padding: 10%;
-}
-
-.fullBox {
-    position: relative;
-    text-align: center;
-    color: black;
-    overflow: auto;
-}
-.photo {
-    width: 250px;
-    position: relative;
-    text-align: center;
-    color: black;
-    overflow: auto;
-}
-.photo img{
-    width: 100%;
-}
-.centered{
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    background-color:teal;
-}
-
-/*Desktop*/
+  /*Desktop*/
 @media only screen and (max-width: 980px) {
     .wrapper {
         width:100%;
